# cosmwasm-defi-stablecoin

./: .gitignore  Cargo.toml  README.md  TODO.txt  package-lock.json  package.json  wasmkit.config.js
artifacts/checkpoints/: decentralized_stablecoin.yaml  dsc.yaml  dsc_engine.yaml  oracle.yaml
artifacts/contracts/: counter.wasm  dsc_compressed.wasm  dsc_engine.wasm  oracle_compressed.wasm
artifacts/schema/dsc_engine/: execute_msg.json
artifacts/schema/mock_pyth/: execute_msg.json
artifacts/schema/oracle/: query_msg.json
artifacts/typescript_schema/: CounterContract.ts  DecentralizedStablecoinContract.ts  DscContract.ts  DscEngineContract.ts  MockPythContract.ts  OracleContract.ts
contracts/dsc/: Cargo.toml  README.md
contracts/dsc/src/: contract.rs
contracts/dsc_engine/: Cargo.toml
contracts/dsc_engine/examples/: schema.rs
contracts/dsc_engine/schema/: instantiate_msg.json  query_msg.json
contracts/dsc_engine/src/: contract.rs  error.rs  lib.rs  msg.rs  queries.rs  state.rs
contracts/dsc_engine/tests/: integration.rs
contracts/mock-pyth/: Cargo.toml
contracts/mock-pyth/examples/: schema.rs
contracts/mock-pyth/src/: contract.rs  msg.rs  state.rs
contracts/oracle/: Cargo.toml
contracts/oracle/examples/: schema.rs
contracts/oracle/src/: contract.rs  lib.rs  msg.rs
playground/src/contracts/instantiateInfo/: contractList.json
playground/src/contracts/schema/: contractSchema.json
scripts/: deploy.ts  deploy_and_test.ts  sample-script.ts
