[package]
name = "dsc"
version = "1.0.0"
authors = ["adsvferreira"]
edition = "2021"
description = "Expanded implementation of a CosmWasm-20 compliant token for the DSC token"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw20 = "0.15"
cw20-base = { version = "0.15", features = ["library"] }
cosmwasm-std = { version = "1.1" }
cosmwasm-schema = { version = "1.1" }
