[package]
name = "dsc-engine"
version = "1.0.0"
authors = ["adsvferreira"]
edition = "2021"
description = "Engine for DSC cw-20 stable token overcollateralization"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-utils = "0.16.0"
cw2 = "0.16.0"
cw20 = "0.16.0"
cw-controllers = "0.16.0"
cw20-base = { version = "0.16.0", features = ["library"] }
cosmwasm-std = { version = "1.1.5", features = ["staking"] }
cw-storage-plus = "0.16.0"
cw-asset = "3.0.0"
thiserror = "1.0.31"
cosmwasm-schema = "1.1.5"
dsc = { path = "../dsc", version = "1.0.0" }
oracle = { path = "../oracle", version = "1.0.0" }
pyth-sdk-cw = "1.2.0"
hex = "0.4.3"

[dev-dependencies]
cw-multi-test = "0.13.4"
mock-pyth = { path = "../mock-pyth", version = "1.0.0" }


