[package]
name = "mock-pyth"
version = "1.0.0"
authors = ["adsvferreira"]
edition = "2021"
description = "Mocked version of the Pyth oracle contract"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema = "1.1.9"
cosmwasm-std = { version = "1.0.0" }
pyth-sdk-cw = "1.2.0"
cw-storage-plus = "0.16.0"
thiserror = "1.0.31"
