[package]
name = "oracle"
version = "1.0.0"
authors = ["adsvferreira"]
edition = "2021"
description = "Pyth Oracle Wrapper for DSC cw-20 stable coin"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.13.4"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
cosmwasm-schema = "1.1.9"
pyth-sdk-cw = "1.2.0"

[dev-dependencies]
cw-multi-test = "0.13.4"
